chore(blocks): proof of concept of eval usage

--- a/templates/pages-read.html
+++ b/templates/pages-read.html
@@ -3,21 +3,22 @@
 <% it.pages.forEach(page => { %>
   <article>
     <h2><%= page.metadata.name %></h2>
+
+    <% it.blocks.forEach(block => { %>
+    <p>
+      <%= block.output %>
+    </p>
+    <% }) %>
+
+    <form id="block-create" method="post" action="/pages/<%= page.idPage %>/block">
+      <select name="type">
+        <option value="text">Text</option>
+        <option value="javascript">Javascript</option>
+      </select>
+
+      <textarea name="data"></textarea>
+
+      <button type="submit">Add Block</button>
+    </form>
   </article>
-
-  <% it.blocks.forEach(block => { %>
-    <article>
-      <%= block.payload.data %>
-    </article>
-  <% }) %>
-
-  <form id="block-create" method="post" action="/pages/<%= page.idPage %>/block">
-    <select name="type">
-      <option value="text">Text</option>
-    </select>
-
-    <textarea name="data"></textarea>
-
-    <button type="submit">Add Block</button>
-  </form>
 <% }) %>
