--- a/templates/pages-read.html
+++ b/templates/pages-read.html
@@ -6,7 +6,21 @@
 
     <% it.blocks.forEach(block => { %>
     <p>
-      <%= block.output %>
+      <form id="block-update" method="post" action="/blocks/<%= block.idBlock %>/update">
+        <fieldset role="group">
+          <textarea name="data"><%= block.payload.data %></textarea>
+          <button class="outline" type="submit">Update</button>
+        </fieldset>
+
+        <input type="hidden" name="type" value="<%= block.metadata.type %>">
+        <input type="hidden" name="idPage" value="<%= page.idPage %>">
+      </form>
+
+      <% if (block.metadata.type === 'javascript') { %>
+        <figure>
+        <%= block.output %>
+        </figure>
+      <% } %>
     </p>
     <% }) %>
 
