--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= it.page.title %></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
   </head>
   <body>
     <%~ include('header.html') %>
 
-    <main class="container-fluid">
+    <main class="container">
       <%~ it.body %>
     </main>
   </body>
