--- a/templates/pages-read.html
+++ b/templates/pages-read.html
@@ -6,20 +6,26 @@
 
     <% it.blocks.forEach(block => { %>
     <p>
-      <form id="block-update" method="post" action="/blocks/<%= block.idBlock %>/update">
-        <fieldset role="group">
-          <textarea name="data"><%= block.payload %></textarea>
-          <button class="outline" type="submit">Update</button>
-        </fieldset>
+      <% if (block.metadata.type !== 'image') { %>
+        <form id="block-update" method="post" action="/blocks/<%= block.idBlock %>/update">
+          <fieldset role="group">
+            <textarea name="data"><%= block.payload %></textarea>
+            <button class="outline" type="submit">Update</button>
+          </fieldset>
 
-        <input type="hidden" name="type" value="<%= block.metadata.type %>">
-        <input type="hidden" name="idPage" value="<%= page.idPage %>">
-      </form>
+          <input type="hidden" name="type" value="<%= block.metadata.type %>">
+          <input type="hidden" name="idPage" value="<%= page.idPage %>">
+        </form>
+      <% } %>
 
       <% if (block.metadata.type === 'javascript') { %>
         <figure>
         <%= block.output %>
         </figure>
+      <% } %>
+
+      <% if (block.metadata.type === 'image') { %>
+        <img src="<%= block.output %>">
       <% } %>
     </p>
     <% }) %>
@@ -31,6 +37,16 @@
       </select>
 
       <textarea name="data"></textarea>
+
+      <button type="submit">Add Block</button>
+    </form>
+
+    <form id="block-create" method="post" action="/pages/<%= page.idPage %>/block-file" enctype="multipart/form-data">
+      <select name="type">
+        <option value="image">Image</option>
+      </select>
+
+      <input type="file" id="file" name="file">
 
       <button type="submit">Add Block</button>
     </form>
