chore: progressive enhance block form

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= it.page.title %></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <link rel="stylesheet" href="/assets/app.css">
   </head>
   <body>
     <%~ include('header.html') %>
@@ -11,5 +12,7 @@
     <main class="container">
       <%~ it.body %>
     </main>
+
+    <script src="/assets/app.js"></script>
   </body>
 </html>
