chore(pages): wrap block in detail for collapse ui

--- a/templates/pages-read.html
+++ b/templates/pages-read.html
@@ -5,29 +5,36 @@
     <h2><%= page.metadata.name %></h2>
 
     <% it.blocks.forEach(block => { %>
-    <p>
-      <% if (block.metadata.type !== 'image') { %>
-        <form id="block-update" method="post" action="/blocks/<%= block.idBlock %>/update">
-          <fieldset role="group">
-            <textarea name="data"><%= block.payload %></textarea>
-            <button class="outline" type="submit">Update</button>
-          </fieldset>
+    <details open>
+      <summary><%= block.metadata.type %></summary>
+      <p>
+        <% if (block.metadata.type !== 'image') { %>
+          <form id="block-update" method="post" action="/blocks/<%= block.idBlock %>/update">
+            <fieldset role="group">
+              <textarea name="data"><%= block.payload %></textarea>
+              <button class="outline" type="submit">Update</button>
+            </fieldset>
 
-          <input type="hidden" name="type" value="<%= block.metadata.type %>">
-          <input type="hidden" name="idPage" value="<%= page.idPage %>">
-        </form>
-      <% } %>
+            <input type="hidden" name="type" value="<%= block.metadata.type %>">
+            <input type="hidden" name="idPage" value="<%= page.idPage %>">
+          </form>
+        <% } %>
 
-      <% if (block.metadata.type === 'javascript') { %>
+        <% if (block.metadata.type === 'javascript') { %>
+          <figure>
+          <%= block.output %>
+          </figure>
+        <% } %>
+
+        <% if (block.metadata.type === 'image') { %>
         <figure>
-        <%= block.output %>
+          <img src="<%= block.output %>">
         </figure>
-      <% } %>
+        <% } %>
 
-      <% if (block.metadata.type === 'image') { %>
-        <img src="<%= block.output %>">
-      <% } %>
-    </p>
+        <a class="outline secondary" href="/pages/<%= page.idPage %>/block/<%= block.idBlock %>/delete" role="button">Delete</a>
+      </p>
+    </details>
     <% }) %>
 
     <block-form>
