chore(pages): edit button to toggle block form

--- a/public/app.css
+++ b/public/app.css
@@ -6,3 +6,7 @@ textarea[readonly] {
   border-top: var(--pico-border-width) solid var(--pico-primary);
   color: var(--pico-muted-color)
 }
+
+.hidden {
+  display: none;
+}
