chore: rebrand as notebook

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid">
   <nav>
     <ul>
-      <li><strong>Journal</strong></li>
+      <li><strong>Notebook</strong></li>
     </ul>
     <ul>
       <li>
