chore(pages): block ordering and insert between

--- a/templates/block-form.html
+++ b/templates/block-form.html
@@ -10,6 +10,8 @@
     </fieldset>
 
     <button type="submit">Add Block</button>
+
+    <input type="hidden" name="order" disabled>
   </form>
 
   <form id="block-create-link" method="post" action="/pages/<%= it.page.idPage %>/block">
